# Codeforces

./: CMakeLists.txt  README.md  main.cpp
Duels/: Duel1.cpp  Duel2.cpp  Duel2b.cpp  Duel3.cpp  Duel4.cpp  Duel5.cpp  Sam_Mitchell_Duel.cpp
EducationalRound120_Div2/: ProblemA.cpp  ProblemB.cpp  ProblemC.cpp  ProblemC_Redo.cpp  ProblemD.cpp
GlobalRound14/: ProblemA.cpp  ProblemB.cpp  ProblemC.cpp  ProblemCAlternate.cpp  ProblemD.cpp
GoodBye2021/: ProblemA.cpp  ProblemB.cpp  ProblemC.cpp
PracticeProblems/: DivanAndANewProject.cpp  DivanAndAStore.cpp  DivanAndBitwiseOperations.cpp  MEXSequences.cpp  NotQuiteLee.cpp  OddSet.cpp  PleasantPairs.cpp  PlusAndMultiply.cpp  PoisonedDagger.cpp
Round730_Div2/: ProblemA.cpp  ProblemB.cpp  ProblemC.cpp  outputf.in  testfile.cpp
Round731_Div3/: ProblemA.cpp  ProblemB.cpp  ProblemC.cpp  ProblemD.cpp  ProblemE.cpp  ProblemG.cpp  Testing.cpp
Round763_Div2/: ProblemA.cpp  ProblemB.cpp  ProblemC.cpp  ProblemC_Redo.cpp
